<resources>
    <!--底部导航栏-->
    <string name="app_name">KLCSJAndroid</string>
    <string name="bottom_healthy">康</string>
    <string name="bottom_happy">乐</string>
    <string name="bottom_wealth">财</string>
    <string name="bottom_food">食</string>
    <string name="bottom_family">家</string>

    <!--高德地图相关字符串-->
    <string name="test_map_button">打开地图</string>

    <!--"食"相关字符串-->
    <string name="daily_meals">每日食谱</string>

</resources>
